# dagra

./: .clang-format  .clang-format-ignore  .clang-tidy.in  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml
docs/: index.md
docs/cli/: parser.md
docs/core/: dag.md  task.md
docs/execution/: runner.md
docs/utils/: logger.md
include/dagra/cli/: parser.hpp
include/dagra/core/: dag.hpp  task.hpp
include/dagra/execution/: runner.hpp
include/dagra/utils/: logger.hpp
scripts/: build.sh  format.sh  lint.sh  run_tests.sh
src/: main.cpp
src/cli/: parser.cpp
src/core/: dag.cpp
src/execution/: runner.cpp
tests/: dag_test.cpp  main.cpp  parser_test.cpp  runner_test.cpp  sample_config.yaml
